<resources>
    <string name="app_name">pokerCalc</string>
    <string name="addSesh">Add session</string>
    <string name="cash_out">Cash Out</string>
    <string name="buy_in_amount">Buy In Amount</string>
    <string name="big_blind">Big Blind</string>
    <string name="small_blind">Small Blind</string>
    <string name="time_ended">Time Ended (HH:MM)</string>
    <string name="time_started">Time Started (HH:MM)</string>
    <string name="date_month_day_year">Date (MM/DD/YYYY)</string>
    <string name="input_the_following">Input Info:</string>
    <string name="textview">TextView</string>
    <string name="PlusSign">+</string>
    <string name="_1_2_nle">blinds</string>
    <string name="_8_2_2023">date</string>
    <string name="_285">profit</string>
    <string name="you_won">You won</string>
    <string name="bought_in_for_300_out_with_585">Bought in for X, out with Y</string>
    <string name="_142_5_bigs">Bigs</string>
    <string name="_11_big_blinder_per_hour_for_8_hours_and_38_minutes">100 Blinds per hour</string>
    <string name="home">Home</string>
    <string name="new_285">285</string>
    <string name="reset">Reset</string>
    <string name="session_info">Session Info</string>
    <string name="poker_session_history">" Poker Sessions"</string>
    <string name="time_started_hh_mm">Time Started (HH:MM)</string>
    <string name="arrow"><![CDATA[<-]]></string>
    <string name="x">X</string>
    <string name="checkMark">✓</string>
    <string name="dollarSign">$</string>
    <string name="overall">Overall:</string>
</resources>